@@ -106,8 +106,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
           <fork>true</fork>
           <!-- Allow compiling against com.sun.xml.internal classes -->
           <testCompilerArgument>-XDignore.symbol.file</testCompilerArgument>
@@ -127,6 +127,41 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>surefire-java9orhigher</id>
+        <activation>
+          <jdk>(9,)</jdk>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.22.2</version>
+              <configuration>
+                <argLine>
+                   --add-opens java.base/java.lang=ALL-UNNAMED
+                   --add-opens java.base/java.net=ALL-UNNAMED
+                   --add-opens java.base/java.util=ALL-UNNAMED
+                   --add-opens java.base/java.security=ALL-UNNAMED
+                   --add-opens java.base/javax.crypto=ALL-UNNAMED
+                   --add-opens java.base/sun.reflect.misc=ALL-UNNAMED
+                   --add-opens java.base/sun.security.action=ALL-UNNAMED
+                   --add-opens java.desktop/java.beans=ALL-UNNAMED
+                   --add-opens java.desktop/javax.imageio.spi=ALL-UNNAMED
+                   --add-opens java.desktop/sun.java2d.opengl=ALL-UNNAMED
+                   --add-opens java.desktop/sun.awt=ALL-UNNAMED
+                   --add-opens java.desktop/sun.swing=ALL-UNNAMED
+                   --add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED
+                   --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+                   --add-opens java.management/sun.management=ALL-UNNAMED
+                   --add-opens java.management/com.sun.jmx.interceptor=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
+    </profile>
     <profile>
       <id>release</id>
       <build>
